crates/squawk_parser/src/snapshots/parser__test__set_constraints_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/set_constraints.sql
---
SOURCE_FILE
  COMMENT "-- docs"
  WHITESPACE "\n"
  SET_CONSTRAINTS_STMT
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    DEFERRED_KW "deferred"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS_STMT
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS_STMT
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "foo"
    COMMA ","
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "bar"
    COMMA ","
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "a"
      DOT "."
      PATH_SEGMENT
        NAME
          IDENT "b"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_CONSTRAINTS_STMT
    SET_KW "set"
    WHITESPACE " "
    CONSTRAINTS_KW "constraints"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "bar"
    WHITESPACE " "
    IMMEDIATE_KW "immediate"
  SEMICOLON ";"
  WHITESPACE "\n\n"
