crates/squawk_parser/src/snapshots/parser__test__set_transaction_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/set_transaction.sql
---
SOURCE_FILE
  COMMENT "-- docs"
  WHITESPACE "\n"
  SET_TRANSACTION_STMT
    SET_KW "SET"
    WHITESPACE " "
    TRANSACTION_KW "TRANSACTION"
    WHITESPACE " "
    SNAPSHOT_KW "SNAPSHOT"
    WHITESPACE " "
    LITERAL
      STRING "'00000003-0000001B-1'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_TRANSACTION_STMT
    SET_KW "SET"
    WHITESPACE " "
    SESSION_KW "SESSION"
    WHITESPACE " "
    CHARACTERISTICS_KW "CHARACTERISTICS"
    WHITESPACE " "
    AS_KW "AS"
    WHITESPACE " "
    TRANSACTION_KW "TRANSACTION"
    WHITESPACE " "
    ISOLATION_KW "ISOLATION"
    WHITESPACE " "
    LEVEL_KW "LEVEL"
    WHITESPACE " "
    READ_KW "READ"
    WHITESPACE " "
    COMMITTED_KW "COMMITTED"
    COMMA ","
    WHITESPACE " "
    READ_KW "read"
    WHITESPACE " "
    WRITE_KW "write"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_TRANSACTION_STMT
    SET_KW "SET"
    WHITESPACE " "
    TRANSACTION_KW "TRANSACTION"
    WHITESPACE " "
    ISOLATION_KW "ISOLATION"
    WHITESPACE " "
    LEVEL_KW "LEVEL"
    WHITESPACE " "
    SERIALIZABLE_KW "SERIALIZABLE"
    COMMA ","
    WHITESPACE " "
    READ_KW "READ"
    WHITESPACE " "
    WRITE_KW "WRITE"
    COMMA ","
    WHITESPACE " "
    NOT_KW "NOT"
    WHITESPACE " "
    DEFERRABLE_KW "DEFERRABLE"
  WHITESPACE "\n\n"
