crates/squawk_parser/src/snapshots/parser__test__unlisten_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/unlisten.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  UNLISTEN_STMT
    UNLISTEN_KW "unlisten"
    WHITESPACE " "
    NAME
      IDENT "virtual"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  UNLISTEN_STMT
    UNLISTEN_KW "unlisten"
    WHITESPACE " "
    STAR "*"
  SEMICOLON ";"
  WHITESPACE "\n\n"
